tests/compile_errors/005-bad-named-variable-value.buzz
| Bad value type: expected type `Yo`, got `num`
object Yo {
    str name,
}

test "Wrong named variable value" {
    Yo yo = Yo{ name = "yolo" };

    yo = 12;
}